<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center"
  android:fitsSystemWindows="true"
  android:focusableInTouchMode="true"
  android:orientation="vertical">


  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/white">

    <ImageView
      android:id="@+id/imgClose"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="16dp"
      android:layout_marginRight="16dp"
      android:padding="4dp"
      android:src="@drawable/ic_close_accent"
      />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:gravity="center"
      android:orientation="vertical">

      <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:paddingHorizontal="12dp"
        android:background="@color/colorAccent"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@color/white" />

      <Button
        android:id="@+id/btnMyProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:paddingHorizontal="12dp"
        android:background="@color/light_blue"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textColor="@color/white" />

      <Button
        android:id="@+id/btnProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:paddingHorizontal="12dp"
        android:background="@color/blue"
        android:text="My Product"
        android:textAllCaps="false"
        android:textColor="@color/white" />

      <Button
        android:id="@+id/btnMyFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:paddingHorizontal="12dp"
        android:background="@color/colorAccentDark"
        android:text="My Favourite"
        android:textAllCaps="false"
        android:textColor="@color/white" />
      <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:paddingHorizontal="12dp"
        android:background="#FFA307"
        android:text="Edit Profile"
        android:textAllCaps="false"
        android:textColor="@color/white" />

      <Button
        android:id="@+id/btnMyOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:paddingHorizontal="12dp"
        android:background="#5E07FF"
        android:text="My Orders"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
      android:id="@+id/btnMyShoppingCart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/small_padding"
      android:paddingHorizontal="12dp"
      android:background="@color/black"
      android:text="My Shopping Cart"
      android:textAllCaps="false"
      android:textColor="@color/white" />

    <Button
      android:id="@+id/btnMyMembership"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/btnProduct"
      android:layout_centerInParent="true"
      android:layout_marginBottom="@dimen/small_padding"
      android:paddingHorizontal="12dp"
      android:background="@color/colorAccentDark"
      android:text="My Membership"
      android:textAllCaps="false"
      android:textColor="@color/white" />

      <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:paddingHorizontal="12dp"
        android:background="@color/color_red"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    </LinearLayout>




  </RelativeLayout>

</LinearLayout>