<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingLeft="@dimen/normal_padding"
  android:paddingRight="@dimen/normal_padding"
  android:paddingTop="@dimen/normal_padding"
  android:paddingBottom="47dp"
  android:background="@color/white"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:orientation="horizontal">
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="3"
      android:orientation="vertical"
      android:layout_marginVertical="@dimen/margin_normal"
      android:layout_marginRight="2dp">
      <TextView
        android:id="@+id/tvRestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Restaurant Name"
        fontPath="@string/fonts_Lato_Bold"
        android:textSize="13sp"
        android:textColor="@color/textColorDarkGrey"
        tools:ignore="MissingPrefix" />
      <TextView
        android:id="@+id/tvReservationNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Reservation Number: 504566d53004aa0fdabc33fa"
        android:textSize="8sp"
        android:textColor="@color/textColorDarkGrey"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical"
      android:layout_gravity="center_vertical"
      android:layout_marginVertical="@dimen/margin_normal"

      android:layout_marginLeft="2dp"
      >
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        fontPath="@string/fonts_Lato_Bold"
        android:textSize="7sp"
        android:text="@string/reservation_date_title"
        android:textColor="@color/orchid"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />
      <TextView
        android:id="@+id/tvReservationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/text_size_extra_small"
        tools:text="26/10/2020"
        android:textColor="@color/textColorDarkGrey"/>
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4">
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginRight="2dp"
      android:orientation="vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        fontPath="@string/fonts_Lato_Bold"
        android:textStyle="bold"
        android:textSize="7sp"
        android:minLines="2"
        android:text="reservation \nname"
        android:layout_marginVertical="@dimen/margin_small"
        android:textColor="@color/orchid"
        tools:ignore="MissingPrefix" />
      <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_extra_small"
        tools:text="Jane"
        android:textColor="@color/textColorDarkGrey"/>
      <TextView
        android:visibility="gone"
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        tools:text="Doe"
        android:textColor="@color/textColorDarkGrey"/>
    </LinearLayout>
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="2dp"
      android:layout_marginRight="2dp"
      android:orientation="vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        fontPath="@string/fonts_Lato_Bold"
        android:textSize="7sp"
        android:text="@string/status"
        android:minLines="2"
        android:textStyle="bold"
        android:layout_marginVertical="@dimen/margin_small"
        android:textColor="@color/orchid"
        tools:ignore="MissingPrefix" />
      <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_extra_small"
        tools:text="Unconfirmed"
        android:textColor="@color/textColorDarkGrey"/>
    </LinearLayout>
    <LinearLayout
      android:id="@+id/ln_skydollar_redeem"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="2dp"
      android:layout_marginRight="2dp"
      android:orientation="vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        fontPath="@string/fonts_Lato_Bold"
        android:textSize="7sp"
        android:minLines="2"
        android:textStyle="bold"
        android:text="sky dollars \nearn"
        android:layout_marginVertical="@dimen/margin_small"
        android:textColor="@color/orchid"
        tools:ignore="MissingPrefix" />
      <TextView
        android:id="@+id/tv_sky_dollar_redeemed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_extra_small"
        tools:text="5"
        android:textColor="@color/textColorDarkGrey"/>
    </LinearLayout>
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="2dp"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        fontPath="@string/fonts_Lato_Bold"
        android:textSize="7sp"
        android:minLines="2"
        android:textStyle="bold"
        android:text="@string/reservation_time_title"
        android:layout_marginVertical="@dimen/margin_small"
        android:textColor="@color/orchid"
        tools:ignore="MissingPrefix" />
      <TextView
        android:id="@+id/tvReservationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_extra_small"
        tools:text="18:30"
        android:textColor="@color/textColorDarkGrey"/>
    </LinearLayout>

  </LinearLayout>
  <View
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:layout_marginTop="20dp"
    android:background="@color/grey"/>
</LinearLayout>